@@ -119,10 +119,10 @@ void main_windowObj::do_create_dialog(const create_dialog_args &args,
 			 impl->handler,
 			 args.position,
 			 args.window_id,
-			 "dialog_background", args.modal, args.urgent,
+			 "dialog_background",
+			 "dialog,normal",
+			 args.modal, args.urgent,
 			 args.grab_input_focus);
-
-	handler->set_window_type("dialog,normal");
 
 	ptr<dialogObj::implObj> dialog_impl;
 
