@@ -53,6 +53,7 @@ class dialogObj::handlerObj : public main_windowObj::handlerObj {
 		   const std::variant<dialog_position, rectangle> &position,
 		   const std::string &window_id,
 		   const color_arg &background_color,
+		   const char *window_type,
 		   bool modal,
 		   bool urgent,
 		   bool grab_input_focus);
