@@ -29,11 +29,15 @@ main_windowObj::handlerObj::handlerObj(ONLY IN_THREAD,
 				       const std::optional<rectangle>
 				       &suggested_position,
 				       const std::string &window_id,
+				       const char *window_type,
+				       const char *window_state,
 				       const color_arg &background_color)
 	: superclass_t({},
 		       IN_THREAD, parent_screen,
 		       background_color,
 		       shared_handler_data::create(),
+		       window_type,
+		       window_state,
 		       0),
 	  on_delete_callback_thread_only([](THREAD_CALLBACK,
 					    const auto &ignore) {}),
