@@ -54,9 +54,11 @@ create_popup_attachedto_element_impl(factoryObj &parent_factory,
 			parent_handler,
 			attachedto_info,
 			parent_container->container_element_impl()
-				.nesting_level+2});
+			.nesting_level+2,
+			"popup_menu,dropdown_menu",
+			"",
+		});
 
-	attachedto_handler->set_window_type("popup_menu,dropdown_menu");
 	auto popup_impl=ref<popupObj::implObj>::create(attachedto_handler,
 						       parent_handler);
 
